--- a/.gitignore
+++ b/.gitignore
@@ -174,4 +174,8 @@ poetry.toml
 # LSP config files
 pyrightconfig.json
 
+.tests/
+
+tests
+
 # End of https://www.toptal.com/developers/gitignore/api/python
