Add integration with backend

--- a/.gitignore
+++ b/.gitignore
@@ -178,4 +178,8 @@ pyrightconfig.json
 
 tests
 
+node_modules/
+package.json
+package-lock.json
+
 # End of https://www.toptal.com/developers/gitignore/api/python
