--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
     "react-router-dom": "^7.0.1",
+    "react-spinners": "^0.15.0",
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
