--- a/.gitignore
+++ b/.gitignore
@@ -182,4 +182,6 @@ node_modules/
 frontend/package.json
 frontend/package-lock.json
 
+qodana.yaml
+
 # End of https://www.toptal.com/developers/gitignore/api/python
