--- a/requirements.txt
+++ b/requirements.txt
@@ -26,8 +26,13 @@ tqdm==4.67.1
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
-djangorestframework==3.14.0
-djangorestframework-simplejwt==5.3.1
+djangorestframework==3.15.2
+djangorestframework-simplejwt==5.4.0
 django-cors-headers==4.3.1
 drf-yasg==1.21.7
-gunicorn==21.2.0
+gunicorn==22.0.0
+markdown==3.5.2
+django-filter==23.5
+coreapi==2.3.3
+pyyaml==6.0.1
+
