--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,13 +18,16 @@
     "@heroicons/react": "^2.2.0",
     "axios": "^1.7.8",
     "framer-motion": "^11.12.0",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.0.1",
     "react-spinners": "^0.15.0",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "rehype-raw": "^7.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
